# MultiAgent_System

./: .env.example  .gitignore  MASTER_CONTEXT.md  README.md  config.py  pyproject.toml  requirements.txt  setup.sh  test_connection.py
agents/: coder.py  critic.py  rag_agent.py  researcher.py  writer.py
api/: main.py  models.py  session_store.py
api/routes/: documents.py  memory.py  tasks.py
core/: health_check.py  llm_router.py  memory.py  orchestrator.py  state.py  tools.py
ui/: streamlit_app.py
ui/pages/: 1_task_runner.py  2_document_manager.py  3_memory_explorer.py  4_session_history.py
utils/: retry.py
